--- a/public/css/app.css
+++ b/public/css/app.css
@@ -29,3 +29,13 @@
 		transform: rotate(1turn)
 	}
 }
+
+.table thead th {
+	padding-left: 8px;
+	padding-right: 8px;
+}
+
+.table tbody tr td {
+	padding: 8px;
+	font-size: 13.5px;
+}
