--- a/public/css/public.css
+++ b/public/css/public.css
@@ -111,8 +111,8 @@ th {
     font-weight: bold;
 }
 
-tr:hover {
-    background-color: #f9f9f9;
+tr {
+    background: #ffffffb3;
 }
 
 .no-results {
